--- a/cover.html
+++ b/cover.html
@@ -21,7 +21,7 @@
     .cover-container {
       position: relative;
       width: 320px;
-      height: 450px;
+      height: 500px;
       background: #f6f2fb;
       border-radius: 16px;
       box-shadow: 0 8px 20px rgba(0, 0, 0, 0.1);
@@ -54,17 +54,27 @@
     }
 
     .photo-placeholder {
-      width: 160px;
-      height: 160px;
+      width: 220px;
+      height: 220px;
       background: #e0cfea;
       border: 2px dashed #4b145c;
       border-radius: 12px;
-      margin: 30px auto;
+      margin: 20px auto;
       display: flex;
       align-items: center;
       justify-content: center;
       font-size: 0.9em;
       color: #7c3c97;
+      overflow: hidden;
+      position: relative;
+      cursor: pointer;
+    }
+
+    .photo-placeholder img {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+      border-radius: 12px;
     }
 
     button {
@@ -82,6 +92,10 @@
     button:hover {
       background: #912ca3;
     }
+
+    #photoInput {
+      display: none;
+    }
   </style>
 </head>
 <body>
@@ -89,15 +103,33 @@
     <input type="text" id="titleInput" class="editable" value="Titre de votre livre" />
     <input type="text" id="subtitleInput" class="editable" value="Sous-titre éventuel" />
 
-    <div class="photo-placeholder">
+    <div class="photo-placeholder" id="photoPlaceholder">
       Votre photo ici
+      <input type="file" id="photoInput" accept="image/*" />
     </div>
 
     <button id="generateButton">Générer Livre</button>
   </div>
 
   <script>
-    // On pourra ajouter ici plus tard la logique d'upload de photo et de sauvegarde !
+    const placeholder = document.getElementById('photoPlaceholder');
+    const input = document.getElementById('photoInput');
+
+    placeholder.addEventListener('click', () => {
+      input.click();
+    });
+
+    input.addEventListener('change', (event) => {
+      const file = event.target.files[0];
+      if (file) {
+        const reader = new FileReader();
+        reader.onload = (e) => {
+          placeholder.innerHTML = `<img src="${e.target.result}" alt="Photo">`;
+        };
+        reader.readAsDataURL(file);
+      }
+    });
+
     document.getElementById("generateButton").addEventListener("click", () => {
       alert("🚀 Génération du livre déclenchée (simulation) !");
     });
